--- a/apps/web/templates/todos/new.html.erb
+++ b/apps/web/templates/todos/new.html.erb
@@ -1,10 +1,21 @@
 <h2>Add todo</h2>
 
+<% unless params.valid? %>
+  <div class="errors text-danger">
+    <h4>There was a problem with your submission</h4>
+    <ul>
+      <% params.error_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+    </ul>
+  </div>
+<% end %>
+
 <%=
   form_for :todo, routes.todos_path do
     div class: 'input mb-3' do
       label      :name, class: 'form-label'
-      text_field :name, class: 'form-control', required: true
+      text_field :name, class: 'form-control'
     end
 
     div class: 'input mb-3' do
